chore: add event

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -9,7 +9,10 @@
 
   <body>
     <root>
-      <div data-plugin_nested-nav='{"ajax": "./navItems.json"}'></div>
+      <div
+        style="max-width: 300px; margin: 40px"
+        data-plugin_nested-nav='{"ajax": "./navItems.json"}'
+      ></div>
     </root>
 
     <%= htmlWebpackPlugin.tags.bodyTags %>
